--- a/vault-postgreSQL/templates/postgres-ingress.yaml
+++ b/vault-postgreSQL/templates/postgres-ingress.yaml
@@ -3,16 +3,16 @@ kind: Ingress
 metadata:
   name: postgres-ingress
   annotations:
-    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   rules:
-  - host: {{ .Values.postgres.ingress.host }}
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: postgres
-            port:
-              number: 5432
+    - host: {{ .Values.postgres.ingress.host }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: postgres
+                port:
+                  number: 5432
