--- a/vault-postgreSQL/templates/postgres-ingress.yaml
+++ b/vault-postgreSQL/templates/postgres-ingress.yaml
@@ -2,11 +2,13 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: postgres-ingress
+  namespace: hashicorp-vault # Add your namespace here
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
+  ingressClassName: nginx # Specify the ingress class
   rules:
-    - host: {{ .Values.postgres.ingress.host }}
+    - host: {{ .Values.postgres.ingress.host }} # Ensure this value is set in your Helm chart
       http:
         paths:
           - path: /
