--- a/vault-postgreSQL/templates/postgres-ingress.yaml
+++ b/vault-postgreSQL/templates/postgres-ingress.yaml
@@ -2,19 +2,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: postgres-ingress
-  namespace: hashicorp-vault # Add your namespace here
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    kubernetes.io/ingress.class: nginx
 spec:
-  ingressClassName: nginx # Specify the ingress class
   rules:
-    - host: {{ .Values.postgres.ingress.host }} # Ensure this value is set in your Helm chart
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: postgres
-                port:
-                  number: 5432
+  - host: {{ .Values.postgres.ingress.host }}
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: postgres
+            port:
+              number: 5432
