--- a/vault-postgreSQL/templates/vault-ingress.yaml
+++ b/vault-postgreSQL/templates/vault-ingress.yaml
@@ -2,19 +2,17 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: vault-ingress
-  namespace: hashicrop-vault  # Add your namespace here
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    kubernetes.io/ingress.class: nginx
 spec:
-  ingressClassName: nginx  # Add this line to match the ingress controller
   rules:
-    - host: {{ .Values.vault.ingress.host }}
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: vault
-                port:
-                  number: 8200
+  - host: {{ .Values.vault.ingress.host }}
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: vault
+            port:
+              number: 8200
