--- a/vault-postgreSQL/templates/postgres-pv.yaml
+++ b/vault-postgreSQL/templates/postgres-pv.yaml
@@ -10,5 +10,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
+   storageclassname: "gp2"
   hostPath:
     path: /mnt/postgres-data
