--- a/vault-postgreSQL/templates/postgres-pvc.yaml
+++ b/vault-postgreSQL/templates/postgres-pvc.yaml
@@ -10,4 +10,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName:  postgres-storage-class-gp3
+  storageClassName:  manual
