--- a/vault-postgreSQL/templates/vault-pv.yaml
+++ b/vault-postgreSQL/templates/vault-pv.yaml
@@ -10,5 +10,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
+  storageClassName: manual
   hostPath:
     path: /mnt/vault-data
