--- a/vault-postgreSQL/templates/vault-pv.yaml
+++ b/vault-postgreSQL/templates/vault-pv.yaml
@@ -10,6 +10,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: gp2
+  storageClassName: manual
   hostPath:
     path: /mnt/vault-data
