--- a/vault-postgreSQL/values.yaml
+++ b/vault-postgreSQL/values.yaml
@@ -1,9 +1,9 @@
-
 vault:
   image: hashicorp/vault:1.15.0
   replicas: 1
   serviceType: LoadBalancer
   storagePath: /vault/data
+  storageClass: gp3-csi  # Added storage class for Vault
   ingress:
     enabled: true
     host: vault.cloudmasa.app
@@ -13,6 +13,7 @@ postgres:
   replicas: 1 
   serviceType: LoadBalancer
   storagePath: /var/lib/postgresql/data
+  storageClass: gp3-csi  # Added storage class for PostgreSQL
   username: vault_user
   password: vault_password
   database: vault_db
