--- a/vault-postgreSQL/templates/postgres-pv.yaml
+++ b/vault-postgreSQL/templates/postgres-pv.yaml
@@ -10,6 +10,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: manual
+  storageClassName: gp3-csi
   hostPath:
     path: /mnt/postgres-data
