--- a/vault-postgreSQL/templates/vault-injector.yaml
+++ b/vault-postgreSQL/templates/vault-injector.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: vault
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -42,11 +47,13 @@ spec:
             requests:
               cpu: "250m"
               memory: "64Mi"
+      namespace: vault  # Use the new namespace
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: vault-agent-injector
+  namespace: vault  # Use the new namespace
   labels:
     app.kubernetes.io/name: vault-agent-injector
     app.kubernetes.io/instance: vault
@@ -80,7 +87,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: vault-agent-injector
-    namespace: default
+    namespace: vault  # Use the new namespace
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
@@ -102,7 +109,7 @@ webhooks:
     clientConfig:
       service:
         name: vault-agent-injector
-        namespace: default
+        namespace: vault  # Use the new namespace
         path: "/mutate"
       caBundle: ""
     namespaceSelector:
