--- a/vault-postgreSQL/templates/vault-injector.yaml
+++ b/vault-postgreSQL/templates/vault-injector.yaml
@@ -1,15 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: vault
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vault-agent-injector
-  labels:
-    app.kubernetes.io/name: vault-agent-injector
-    app.kubernetes.io/instance: vault
+  namespace: vault  # Use a custom namespace
 spec:
   replicas: 1
   selector:
@@ -47,16 +40,14 @@ spec:
             requests:
               cpu: "250m"
               memory: "64Mi"
-      namespace: vault  # Use the new namespace
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: vault-agent-injector
-  namespace: vault  # Use the new namespace
-  labels:
-    app.kubernetes.io/name: vault-agent-injector
-    app.kubernetes.io/instance: vault
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 1000
+            runAsNonRoot: true
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - NET_RAW  # Drop unnecessary capabilities
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -69,49 +60,3 @@ rules:
   - apiGroups: [""]
     resources: ["pods"]
     verbs: ["get", "list", "patch"]
-  - apiGroups: ["admissionregistration.k8s.io"]
-    resources: ["mutatingwebhookconfigurations"]
-    verbs: ["get", "list", "create", "update", "delete"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: vault-agent-injector
-  labels:
-    app.kubernetes.io/name: vault-agent-injector
-    app.kubernetes.io/instance: vault
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: vault-agent-injector
-subjects:
-  - kind: ServiceAccount
-    name: vault-agent-injector
-    namespace: vault  # Use the new namespace
----
-apiVersion: admissionregistration.k8s.io/v1
-kind: MutatingWebhookConfiguration
-metadata:
-  name: vault-agent-injector
-  labels:
-    app.kubernetes.io/name: vault-agent-injector
-    app.kubernetes.io/instance: vault
-webhooks:
-  - name: vault.hashicorp.com
-    admissionReviewVersions: ["v1", "v1beta1"]
-    sideEffects: None
-    rules:
-      - operations: ["CREATE", "UPDATE"]
-        apiGroups: [""]
-        apiVersions: ["v1"]
-        resources: ["pods"]
-    failurePolicy: Fail
-    clientConfig:
-      service:
-        name: vault-agent-injector
-        namespace: vault  # Use the new namespace
-        path: "/mutate"
-      caBundle: ""
-    namespaceSelector:
-      matchLabels:
-        vault-injection: enabled
