--- a/vault-postgreSQL/templates/postgres-deployment.yaml
+++ b/vault-postgreSQL/templates/postgres-deployment.yaml
@@ -1,33 +1,25 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
 metadata:
-  name: postgres
+  name: postgres-network-policy
 spec:
-  replicas: {{ .Values.postgres.replicas }}
-  selector:
+  podSelector:
     matchLabels:
       app: postgres
-  template:
-    metadata:
-      labels:
-        app: postgres
-    spec:
-      containers:
-      - name: postgres
-        image: {{ .Values.postgres.image }}
-        env:
-        - name: POSTGRES_USER
-          value: {{ .Values.postgres.username }}
-        - name: POSTGRES_PASSWORD
-          value: {{ .Values.postgres.password }}
-        - name: POSTGRES_DB
-          value: {{ .Values.postgres.database }}
-        ports:
-        - containerPort: 5432
-        volumeMounts:
-        - name: postgres-storage
-          mountPath: {{ .Values.postgres.storagePath }}
-      volumes:
-      - name: postgres-storage
-        persistentVolumeClaim:
-          claimName: postgres-pvc-new
+  ingress:
+  - from:
+    - podSelector:
+        matchLabels:
+          app: vault  # You can specify the source pods allowed to access PostgreSQL
+    ports:
+    - protocol: TCP
+      port: 5432
+  egress:
+  - to:
+    - podSelector: {}
+    ports:
+    - protocol: TCP
+      port: 5432
+  policyTypes:
+  - Ingress
+  - Egress
